fixed faq page expand collapse

--- a/application/views/common-css/3style.css
+++ b/application/views/common-css/3style.css
@@ -14119,43 +14119,49 @@ input[type="password"][disabled] {
 }
 
 .filterDiv {
+	cursor: pointer;
 	font-size: 1.1rem;
 	font-weight: 400;
-	margin: 2rem 0;
+	margin: -1px 0;
+	padding: 1.5rem 0;
+	padding-inline-end:25px; 
 	position: relative;
 	display: flex;
 	align-items: center;
+	border-top: solid 1px var(--border-color);
+	border-bottom: solid 1px var(--border-color);
+	position: relative;
 }
 
-h3.faqclose {
-	cursor: pointer;
+.filterDiv:hover {
+	color: var(--first-color);
 }
 
-h3.faqclose::after {
-	content: "\2715";
+.filterDiv:after {
+	font-family: FontAwesome;
+	content: "";
 	font-size: 11px;
 	font-weight: 300;
 	line-height: 30px;
-	margin-inline-start: 1rem;
-	border: solid 1px var(--body-color);
 	border-radius: 50%;
-	width: 22px;
-	height: 22px;
 	display: flex;
 	align-items: center;
-
 	justify-content: center;
-
-	color: var(--body-color);
+	color: inherit;
+	margin-inline-start: 1rem;
+	transition: all 0.1s ease;
+	transform-origin:center;
+	position: absolute;
+	right: 0;
+	top: 27px;
+	width: 20px;
+	height: 20px;
 }
 
-h3.faqclose::before {
-	-moz-transform: rotate(-90deg) !important;
-	-ms-transform: rotate(-90deg) !important;
-	-o-transform: rotate(-90deg) !important;
-	-webkit-transform: rotate(-90deg) !important;
-	transform: rotate(-90deg) !important;
+.filterDiv.faqclose:after {
+	transform: rotateZ(90deg);
 }
+
 
 /*
 .filterDiv:before,
@@ -14196,17 +14202,17 @@ h3.faqclose::before {
 
 div.faqanswer {
 	background: var(--gray-bg);
-	margin: 1rem 0;
+	margin: 0;
 	line-height: 1.8em;
 	border-radius: 4px;
-	/*margin-inline-start: 3rem;*/
-	border: solid 1px var(--border-color);
+	/*margin-inline-start: 3rem;
+	border: solid 1px var(--border-color);*/
 	display: none;
 }
 
 div.faqanswer p {
 	margin: 0;
-	padding: 1rem;
+	padding: 1rem 0;
 }
 
 .faq-filters a {
