--- a/application/views/css/style--arabic.css
+++ b/application/views/css/style--arabic.css
@@ -676,7 +676,7 @@ input[type="text"].p-cards.meastro {
 	right: 0;
 }
 
-.slick-next {
+.slick-next, .filterDiv:after {
 	right: auto;
 	left: 0;
 }
